# myxiaomi

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  Xiaomi-cloud-tokens-extractor.py  debug_segments.py  inspect_robot.py  mqtt_monitor.py  ping_vacuum.py  pyproject.toml  requirements.txt  session-ses_4001.md  setiptables_vacuum_fix.sh  start-server.sh  unsetiptables_vacuum_fix.sh  zone_discovery.py
develop_journal/2026-03-18/: NOTES.md  TODO.md
vacuumd/: mqtt_bridge.py  verify_foundation.py
vacuumd/api/: main.py
vacuumd/api/routes/: control.py  devices.py  history.py  schedules.py  watchdog.py
vacuumd/cli/: main.py
vacuumd/config/: config.yaml  settings.py
vacuumd/controller/: charging_watchdog.py  cloud_faker.py  history_store.py  manager.py  vacuum_controller.py
vacuumd/model/: cleaning_history.py  device.py  robot_state.py  task.py  watchdog_state.py
vacuumd/scheduler/: engine.py
vacuumd/view/: index.html
